Fixed whitespace

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
 	margin: 0;
 	font-size: 25px;
+	overflow: hidden;
 }
 
 @media(max-width: 700px) {
